--- a/README
+++ b/README
@@ -1,3 +1,1 @@
-# Kohana PHP Framework, version 3.1 (release)
-
-This is the current release version of [Kohana](http://kohanaframework.org/).
+# Built on Kohana PHP Framework, version 3.1 (release)
